# azul-research

./: .gitignore  README.md  main.py  pyproject.toml
azul/: pickle_progression.py  score.py  types.py  utils.py  view_progression.py  wall.py
azul/permutations/: all_scores.py  arrangements.py  pattern_lines.py  resolve_placement.py
src/: permutations.py  pickle_path.py  pickle_progression.py  score.py  types.py  utils.py  view_progression.py  wall.py
src/permutations/: all_scores.py  arrangements.py  pattern_lines.py  resolve_placement.py
test/: dataclasses.py  test_scoring.py
test/cases/: endgame_scoring.py  placement_scoring.py
